tests/snapshots/execution_spec__batching-nested-expr.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
}

scalar Url

type User {
  id: Int
  name: String
  values: [Value]
}

type Value {
  value: Int
}

schema {
  query: Query
}
