tests/snapshots/execution_spec__batching-nested-expr.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 10, maxSize: 100}, httpCache: true) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User @expr(body: {if: {cond: {const: {data: true}}, else: {const: {data: {}}}, then: {http: {batchKey: ["id"], path: "/users", query: [{key: "id", value: "{{value.userId}}"}]}}}})
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts")
}

type User {
  id: Int
  name: String
  values: [Value] @expr(body: {concat: [{http: {batchKey: ["id"], path: "/users-values-1", query: [{key: "id", value: "{{value.id}}"}]}}, {http: {batchKey: ["id"], path: "/users-values-2", query: [{key: "id", value: "{{value.id}}"}]}}]})
}

type Value {
  value: Int
}
