tests/snapshots/execution_spec__batching.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(batchRequests: true) {
  query: Query
}

type Query {
  user: User @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users/1")
}

type User {
  id: Int
  name: String
}
