tests/snapshots/execution_spec__cache-control.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json",
    "cache-control": "max-age=3600"
  },
  "body": {
    "data": {
      "u1": {
        "id": 1
      },
      "u2": {
        "id": 2
      }
    }
  }
}
